--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "flickity-as-nav-for": "^2.0.1",
     "jsonp": "^0.2.1",
     "lodash": "^4.17.10",
+    "uikit": "^3.0.0-rc.11",
     "vue": "^2.5.2",
-    "vue-carousel": "^0.10.0"
+    "vue-carousel": "^0.10.0",
+    "vue-flickity": "^1.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
